fixed alignment issues in modal

--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,11 @@ body {
 }
 
 .file-upload {
+  position: relative;
   background-color: #ffffff;
   width: auto;
   margin: 20 auto;
-  padding: 20px;
+  padding: 0 20px 20px;
 }
 
 .file-upload-btn {
@@ -89,10 +90,11 @@ body {
 }
 
 .file-upload-input {
+  position: absolute;
   margin: 0;
   padding: 0;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   outline: none;
   opacity: 0;
   cursor: pointer;
@@ -124,6 +126,7 @@ body {
   text-transform: uppercase;
   color: #15824B;
   padding: 60px 0;
+  text-align: center;
 }
 
 .file-upload-image {
